@@ -1,3 +1,8 @@
+[B]1.2.3[/B] - 02-07-2018
+- Better handling of headers appending
+- Log json objects for debugging purposes
+- Enhanced dash and manifest types conditionals
+
 [B]1.2.2[/B] - 20-06-2018
 - Except gracefull when no args attribute is present.
 
